--- a/robolectric/src/test/resources/res/values/attrs.xml
+++ b/robolectric/src/test/resources/res/values/attrs.xml
@@ -49,6 +49,7 @@
   <attr name="responses" format="reference"/>
   <attr name="string1" format="string"/>
   <attr name="string2" format="string"/>
+  <attr name="string3" format="string"/>
 
   <declare-styleable name="CustomStateView">
     <attr name="stateFoo" format="boolean" />
