`AttributeSetBuilder` should allow potentially invalid values for style attribute. Nicer stringification of `Style` implementations, for debugging.

--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowAssetManager.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowAssetManager.java.vm
@@ -376,7 +376,9 @@ public final class ShadowAssetManager {
       while (styleAttributeResName.type.equals("attr")) {
         AttributeResource attrValue = themeStyleSet.getAttrValue(styleAttributeResName);
         if (attrValue == null) {
-          throw new NullPointerException("no value for " + styleAttributeResName.getFullyQualifiedName() + " in theme");
+          throw new RuntimeException(
+                  "no value for " + styleAttributeResName.getFullyQualifiedName()
+                      + " in " + themeStyleSet);
         }
         if (attrValue.isResourceReference()) {
           styleAttributeResName = attrValue.getResourceReference();
