Fixed support for `style="?referenceWithImplicitAttrType"`; previously only `style="?attr/reference"` worked.

--- a/robolectric/src/test/resources/res/values/themes.xml
+++ b/robolectric/src/test/resources/res/values/themes.xml
@@ -37,6 +37,11 @@
     <item name="parentStyleReference">@style/StyleReferredToByParentAttrReference</item>
   </style>
 
+  <style name="Theme.ThemeContainingStyleReferences" parent="">
+    <item name="styleReference">@style/StyleReferredToByParentAttrReference</item>
+    <item name="styleReferenceWithoutExplicitType">@StyleReferredToByParentAttrReference</item>
+  </style>
+
   <style name="StyleReferredToByParentAttrReference">
     <item name="string2">string 2 from StyleReferredToByParentAttrReference</item>
   </style>
