--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowAssetManager.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowAssetManager.java.vm
@@ -8,17 +8,15 @@ import android.content.res.XmlResourceParser;
 import android.os.ParcelFileDescriptor;
 import android.util.AttributeSet;
 import android.util.TypedValue;
-
 import org.jetbrains.annotations.NotNull;
 import org.robolectric.RuntimeEnvironment;
 import org.robolectric.annotation.HiddenApi;
 import org.robolectric.annotation.Implementation;
 import org.robolectric.annotation.Implements;
 import org.robolectric.annotation.RealObject;
-import org.robolectric.res.ThemeStyleSet;
 import org.robolectric.res.AttributeResource;
-import org.robolectric.res.DrawableNode;
 import org.robolectric.res.DrawableResourceLoader;
+import org.robolectric.res.FileTypedResource;
 import org.robolectric.res.FsFile;
 import org.robolectric.res.ResName;
 import org.robolectric.res.ResType;
@@ -27,6 +25,7 @@ import org.robolectric.res.ResourceLoader;
 import org.robolectric.res.Style;
 import org.robolectric.res.StyleData;
 import org.robolectric.res.StyleResolver;
+import org.robolectric.res.ThemeStyleSet;
 import org.robolectric.res.TypedResource;
 import org.robolectric.res.builder.ResourceParser;
 import org.robolectric.res.builder.XmlResourceParserImpl;
@@ -119,6 +118,11 @@ public final class ShadowAssetManager {
   }
 
   private Converter getConverter(TypedResource value) {
+    if (value instanceof FileTypedResource.Image
+        || (value instanceof FileTypedResource
+            && ((FileTypedResource) value).getFsFile().getName().endsWith(".xml"))) {
+      return new Converter.FromFilePath();
+    }
     return Converter.getConverter(value.getResType());
   }
 
@@ -186,16 +190,17 @@ public final class ShadowAssetManager {
   @HiddenApi @Implementation
   public final InputStream openNonAsset(int cookie, String fileName, int accessMode) throws IOException {
     final ResName resName = qualifyFromNonAssetFileName(fileName);
-    final DrawableNode drawableNode = resourceLoader.getDrawableNode(resName, RuntimeEnvironment.getQualifiers());
+    final FileTypedResource typedResource =
+        (FileTypedResource) resourceLoader.getValue(resName, RuntimeEnvironment.getQualifiers());
 
-    if (drawableNode == null) {
+    if (typedResource == null) {
       throw new IOException("Unable to find resource for " + fileName);
     }
 
     if (accessMode == AssetManager.ACCESS_STREAMING) {
-      return drawableNode.getFsFile().getInputStream();
+      return typedResource.getFsFile().getInputStream();
     } else {
-      return new ByteArrayInputStream(drawableNode.getFsFile().getBytes());
+      return new ByteArrayInputStream(typedResource.getFsFile().getBytes());
     }
   }
 
@@ -316,8 +321,8 @@ public final class ShadowAssetManager {
     // todo: make the drawable loader put stuff into the normal spot...
     String resourceTypeName = getResourceTypeName(resId);
     if (value == null && DrawableResourceLoader.isStillHandledHere(resourceTypeName)) {
-      DrawableNode drawableNode = resourceLoader.getDrawableNode(resId, qualifiers);
-      return new TypedResource<>(drawableNode.getFsFile(), ResType.FILE);
+      FileTypedResource typedResource = (FileTypedResource) resourceLoader.getValue(resId, qualifiers);
+      return new TypedResource<>(typedResource.getFsFile(), ResType.FILE);
     }
 
     // todo: gross. this is so resources.getString(R.layout.foo) works for ABS.
