--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowAssetManager.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowAssetManager.java.vm
@@ -32,16 +32,18 @@ import org.robolectric.res.builder.ResourceParser;
 import org.robolectric.res.builder.XmlBlock;
 import org.robolectric.res.builder.XmlResourceParserImpl;
 import org.robolectric.util.Logger;
-import org.robolectric.util.ReflectionHelpers;
 
 import java.io.ByteArrayInputStream;
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.lang.ref.WeakReference;
+import java.util.ArrayList;
+import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
+import java.util.List;
 
 import static org.robolectric.Shadows.shadowOf;
 
@@ -601,12 +603,11 @@ public final class ShadowAssetManager {
 
   @NotNull private ResName getResName(int id) {
     ResName resName = resourceLoader.getResourceIndex().getResName(id);
-    return checkResName(id, resName);
-  }
-
-  private ResName checkResName(int id, ResName resName) {
     if (resName == null) {
-      throw new Resources.NotFoundException("Unable to find resource ID #0x" + Integer.toHexString(id));
+      List<String> packages = new ArrayList<>(resourceLoader.getResourceIndex().getPackages());
+      Collections.sort(packages);
+      throw new Resources.NotFoundException("Unable to find resource ID #0x" + Integer.toHexString(id)
+          + " in packages " + packages);
     }
     return resName;
   }
