`AssetManager.getResourceIdentifier()` was always returning 0 for raw and xml types, fixed.

--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowAssetManager.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowAssetManager.java.vm
@@ -111,11 +111,9 @@ public final class ShadowAssetManager {
     ResName resName = ResName.qualifyResName(name, defPackage, defType);
 
     // ids are often declared from within layouts, so a special case since we don't collect those:
-    if (!ResName.ID_TYPE.equals(resName.type)) {
-      TypedResource value = resourceLoader.getValue(resName, RuntimeEnvironment.getQualifiers());
-      if (value == null) {
-        return 0;
-      }
+    if (!ResName.ID_TYPE.equals(resName.type)
+        && !resourceLoader.hasValue(resName, RuntimeEnvironment.getQualifiers())) {
+      return 0;
     }
 
     ResourceIndex resourceIndex = resourceLoader.getResourceIndex();
