--- a/robolectric/src/test/resources/res/values/bools.xml
+++ b/robolectric/src/test/resources/res/values/bools.xml
@@ -7,4 +7,5 @@
   <bool name="reference_to_true">@true_bool_value</bool>
   <item name="true_as_item" type="bool">true</item>
   <bool name="different_resource_boolean">false</bool>
+  <bool name="typed_array_true">true</bool>
 </resources>
