Fix getThemeValue style resolution
The resolveRefs parameter is meant to control whether resource values
should be resolved. It should always resolve style references.

Also use AttributeResource#getStyleReference() to correctly handle
cases where an attribute refers to another attribute in a different
package (e.g. ?attr/selectableItemBackground ->
?android:attr/selectableItemBackground).

--- a/robolectric/src/test/resources/res/values/themes.xml
+++ b/robolectric/src/test/resources/res/values/themes.xml
@@ -18,9 +18,11 @@
   <style name="Theme.AnotherTheme" parent="@style/Theme.Robolectric">
     <item name="android:buttonStyle">@style/Widget.AnotherTheme.Button</item>
     <item name="logoWidth">?attr/averageSheepWidth</item>
-    <item name="logoHeight">42dp</item>
+    <item name="logoHeight">@dimen/test_dp_dimen</item>
     <item name="averageSheepWidth">42px</item>
     <item name="animalStyle">@style/Gastropod</item>
+    <item name="isSugary">?attr/isSugary</item>
+    <item name="styleReference">?android:attr/buttonStyle</item>
     <item name="typeface">custom_font</item>
     <item name="string1">string 1 from Theme.AnotherTheme</item>
     <item name="string2">string 2 from Theme.AnotherTheme</item>
