Fix AssetManger.getThemeValue() id resolution.
AssetManager.getThemeValue() should use its ResourceLoader for resolving
the resource id rather than using the system ResourceLoader for all
framework resource ids.

--- a/robolectric/src/test/resources/res/values/themes.xml
+++ b/robolectric/src/test/resources/res/values/themes.xml
@@ -24,6 +24,7 @@
     <item name="typeface">custom_font</item>
     <item name="string1">string 1 from Theme.AnotherTheme</item>
     <item name="string2">string 2 from Theme.AnotherTheme</item>
+    <item name="android:colorPrimary">@color/white</item>
   </style>
 
   <style name="Theme.ThirdTheme" parent="@style/Theme.Robolectric">
